"Done login and registration"

--- a/Insuranceclaim/Views/Account/Login.cshtml
+++ b/Insuranceclaim/Views/Account/Login.cshtml
@@ -20,7 +20,7 @@
                 <option value="agent">Agent</option>
                 <option value="claim-adjuster">Claim Adjuster</option>
                 <option value="admin">Admin</option>
-                <option value="policy-holder">Policy Holder</option>
+                <option value="POLICY HOLDER">Policy Holder</option>
             </select>
             <label>Username</label>
             <input type="text" name="username" class="form-control" placeholder="Enter username" required />
