--- a/Insuranceclaim/Views/Account/SignUp.cshtml
+++ b/Insuranceclaim/Views/Account/SignUp.cshtml
@@ -22,7 +22,7 @@
             <select id="userType" name="userType" class="form-control" required>
                 <option value="">-- Select User Type --</option>
                 <option value="Agent">Agent</option>
-                <option value="Policy Holder">Policy Holder</option>
+                <option value="POLICY HOLDER">Policy Holder</option>
             </select>
 
             <label>Email</label>
