--- a/Insuranceclaim/Views/Policyholder/MyClaims.cshtml
+++ b/Insuranceclaim/Views/Policyholder/MyClaims.cshtml
@@ -41,7 +41,7 @@
                                 {
                                     statusBadgeClass = "bg-warning-subtle text-warning-emphasis";
                                 }
-                                else if (claim.ClaimStatus == "Resolved")
+                                else if (claim.ClaimStatus == "Approved")
                                 {
                                     statusBadgeClass = "bg-success-subtle text-success-emphasis";
                                 }
