--- a/Insuranceclaim/Views/Shared/_PolicyholderLayout.cshtml
+++ b/Insuranceclaim/Views/Shared/_PolicyholderLayout.cshtml
@@ -27,7 +27,7 @@
             <!-- User Info and Logout Section -->
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
+                    <li class="nav-item d-flex align-items-center">
                         <span class="navbar-text me-3">Welcome back, @User.Identity.Name</span>
                     </li>
                     <li class="nav-item">
