--- a/Insuranceclaim/Views/Account/Login.cshtml
+++ b/Insuranceclaim/Views/Account/Login.cshtml
@@ -28,5 +28,8 @@
             <input type="password" name="password" class="form-control" placeholder="Enter password" required />
             <button type="submit" class="btn btn-login mt-3">Login</button>
         </form>
+        <div class="text-center mt-3">
+            <p>Don't have an account? <a href="@Url.Action("SignUp", "Account")">Sign up</a></p>
+        </div>
     </div>
 </div>
