--- a/Insuranceclaim/Views/Agent/AgentUsers/Create.cshtml
+++ b/Insuranceclaim/Views/Agent/AgentUsers/Create.cshtml
@@ -33,6 +33,10 @@
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="AgentId" class="control-label"></label>
+                <select asp-for="AgentId" class ="form-control" asp-items="ViewBag.AgentId"></select>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
