--- a/Insuranceclaim/Views/Agent/AgentUsers/Delete.cshtml
+++ b/Insuranceclaim/Views/Agent/AgentUsers/Delete.cshtml
@@ -35,6 +35,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Email)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Agent)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Agent.UserId)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
