--- a/Insuranceclaim/Views/Agent/AgentUsers/Edit.cshtml
+++ b/Insuranceclaim/Views/Agent/AgentUsers/Edit.cshtml
@@ -34,6 +34,11 @@
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="AgentId" class="control-label"></label>
+                <select asp-for="AgentId" class="form-control" asp-items="ViewBag.AgentId"></select>
+                <span asp-validation-for="AgentId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
