--- a/Insuranceclaim/Views/Shared/_AdminLayout.cshtml
+++ b/Insuranceclaim/Views/Shared/_AdminLayout.cshtml
@@ -133,7 +133,7 @@
 
     <div class="header">
         <h1>Admin Dashboard</h1>
-        <a href="@Url.Action("Logout", "Account")" class="logout-btn">Logout</a>
+        <a href="@Url.Action("Index", "Home")" class="logout-btn">Logout</a>
     </div>
 
     <div class="dashboard-container">
