"updated claim Adjuster page"

--- a/Insuranceclaim/Views/Account/Login.cshtml
+++ b/Insuranceclaim/Views/Account/Login.cshtml
@@ -18,7 +18,7 @@
             <select name="usertype" id="usertype" class="form-control" required>
                 <option value="">-- Select User Type --</option>
                 <option value="agent">Agent</option>
-                <option value="claim-adjuster">Claim Adjuster</option>
+                <option value="Claim Adjuster">Claim Adjuster</option>
                 <option value="admin">Admin</option>
                 <option value="POLICY HOLDER">Policy Holder</option>
             </select>
