--- a/Insuranceclaim/Views/Admin/AdminSupportTickets/Index.cshtml
+++ b/Insuranceclaim/Views/Admin/AdminSupportTickets/Index.cshtml
@@ -1,5 +1,4 @@
-﻿views/Admin/AdminSupportTickets/Index.cshtml
-@model IEnumerable<Insuranceclaim.Models.SupportTicket>
+﻿@model IEnumerable<Insuranceclaim.Models.SupportTicket>
 
 @{
 
@@ -140,7 +139,6 @@
 
                             @ticket.TicketStatus
                         </span>
-                        <h4>Ticket #@ticket.TicketId</h4>
                     </div>
                     <div class="ticket-info">
                         <p><strong>Username:</strong> @ticket.User?.Username</p>
