--- a/Insuranceclaim/Views/Policyholder/MyClaims.cshtml
+++ b/Insuranceclaim/Views/Policyholder/MyClaims.cshtml
@@ -55,7 +55,7 @@
                                     <td>@claim.Policy?.PolicyName</td>
                                     <td>@claim.ClaimAmount</td>
                                     <td>@claim.ClaimDate?.ToString("yyyy-MM-dd")</td>
-                                    <td><span class="badge @statusBadgeClass rounded-pill">@claim.ClaimStatus</span></td>
+                                    <td><span class="">@claim.ClaimStatus</span></td>
                                 </tr>
                             }
                         </tbody>
