--- a/Insuranceclaim/Views/Policyholder/Support.cshtml
+++ b/Insuranceclaim/Views/Policyholder/Support.cshtml
@@ -46,6 +46,7 @@
                             <th scope="col">Issue Description</th>
                             <th scope="col">Status</th>
                             <th scope="col">Creation Date</th>
+                            <th scope="col">Response</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -58,6 +59,7 @@
                                     <td>@ticket.IssueDescription</td>
                                     <td>@ticket.TicketStatus</td>
                                     <td>@(ticket.CreatedDate?.ToShortDateString())</td>
+                                    <td>@ticket.Response</td>
                                 </tr>
                             }
                         }
